syntax = "proto3";

package continuonxr.continuonbrain.v1;

import "continuonxr/rlds/v1/rlds_episode.proto";

// Draft bridge API between ContinuonXR and ContinuonBrain/OS.
// Provides typed control commands instead of raw numeric vectors.
service ContinuonBrainBridgeService {
  // XR subscribes to robot state for rendering/teleop feedback.
  rpc StreamRobotState(StreamRobotStateRequest) returns (stream StreamRobotStateResponse);

  // XR sends normalized commands derived from teleop input.
  rpc SendCommand(SendCommandRequest) returns (SendCommandResponse);

  // Studio panels pull a declarative list of skills, sensors, and safety hooks.
  rpc GetCapabilityManifest(GetCapabilityManifestRequest) returns (GetCapabilityManifestResponse);

  // Low-latency telemetry stream used by Continuon Brain Studio.
  rpc StreamRobotEditorTelemetry(StreamRobotEditorTelemetryRequest) returns (stream StreamRobotEditorTelemetryResponse);
}

// Identify the XR client in upstream streams.
message StreamRobotStateRequest {
  string client_id = 1;
}

// Encapsulated robot state for rendering and logging.
message StreamRobotStateResponse {
  continuonxr.rlds.v1.RobotState state = 1;
}

// Supported control modes for ContinuonBrain/OS.
enum ControlMode {
  CONTROL_MODE_UNSPECIFIED = 0;
  // End-effector Cartesian twist in meters/second and radians/second.
  CONTROL_MODE_EE_VELOCITY = 1;
  // Joint-space delta in radians to be applied at the requested rate.
  CONTROL_MODE_JOINT_DELTA = 2;
  // Gripper-specific command (position/velocity depending on payload).
  CONTROL_MODE_GRIPPER = 3;
}

// Reference frame used for Cartesian commands.
enum ReferenceFrame {
  REFERENCE_FRAME_UNSPECIFIED = 0;
  REFERENCE_FRAME_BASE = 1;
  REFERENCE_FRAME_TOOL = 2;
}

// Modes available for the gripper controller.
enum GripperMode {
  GRIPPER_MODE_UNSPECIFIED = 0;
  GRIPPER_MODE_POSITION = 1; // meters of opening
  GRIPPER_MODE_VELOCITY = 2; // meters/second opening velocity
}

message Vector3 {
  float x = 1;
  float y = 2;
  float z = 3;
}

message EeVelocityCommand {
  // Linear velocity in meters/second in the selected reference frame.
  Vector3 linear_mps = 1;
  // Angular velocity in radians/second in the selected reference frame.
  Vector3 angular_rad_s = 2;
  ReferenceFrame reference_frame = 3;
}

message JointDeltaCommand {
  // Joint deltas in radians matching the robot's DoF ordering.
  repeated float delta_radians = 1;
}

message GripperCommand {
  GripperMode mode = 1;
  // Target opening width in meters (required for POSITION mode).
  float position_m = 2;
  // Target opening velocity in meters/second (required for VELOCITY mode).
  float velocity_mps = 3;
}

message SafetyStatus {
  // True when the operator acknowledges that estop has been released and control can resume.
  bool estop_released_ack = 1;
  // Optional token for OEM safety-interlock implementations.
  string safety_token = 2;
}

message SendCommandRequest {
  string client_id = 1;
  // Desired control mode for this command.
  ControlMode control_mode = 2;
  // Target command publishing rate in Hz; used by the receiver to enforce rate limits.
  double target_frequency_hz = 3;
  // Safety/estop acknowledgement flags accompanying the control request.
  SafetyStatus safety = 4;

  oneof command {
    EeVelocityCommand ee_velocity = 10;
    JointDeltaCommand joint_delta = 11;
    GripperCommand gripper = 12;
  }
}

message SendCommandResponse {
  bool accepted = 1;
  string message = 2;
  // Receiver indicates whether the command was dropped due to estop or safety interlock.
  bool estop_engaged = 3;
  // True when the requested rate exceeded the controller budget and was throttled.
  bool rate_limited = 4;
}

// Declarative manifest for panels to render skills, sensors, and safety posture.
message CapabilityManifest {
  string robot_model = 1;
  RobotSoftwareVersions software_versions = 2;
  SafetyFeatures safety = 3;
  repeated Skill skills = 4;
  repeated Sensor sensors = 5;
  // Source of the manifest: live, cached, or mock. Kept flexible for offline mode.
  string source = 6;
}

message RobotSoftwareVersions {
  // Version of the on-device runtime executing the behaviors/skills.
  string runtime = 1;
  // Version of the Studio shell (web/native) connected to the robot.
  string studio = 2;
  // Version of the HOPE/CMS bundle currently loaded on the robot.
  string hope_cms_bundle = 3;
  // Optional glove or peripheral firmware version for tactile skills.
  string glove_firmware = 4;
}

message SafetyFeatures {
  bool envelopes_supported = 1;
  bool estop_supported = 2;
  bool safety_head_present = 3;
  bool rate_limiter_present = 4;
  repeated string default_envelopes = 5;
}

message SkillParameter {
  string name = 1;
  string description = 2;
  string type = 3; // e.g., float, enum, pose
  string default_value = 4;
  bool required = 5;
  repeated string enum_values = 6;
}

message Skill {
  string id = 1;
  string name = 2;
  repeated SkillParameter parameters = 3;
  // Required inputs such as pose, glove, or gaze.
  repeated string required_modalities = 4;
  // Safety tags applied by SafetyHead or envelope validators.
  repeated string safety_tags = 5;
  string documentation_uri = 6;
}

message Sensor {
  string id = 1;
  string modality = 2; // e.g., depth, rgb, glove
  double sample_rate_hz = 3;
  double latency_ms = 4;
  string frame_id_domain = 5;
  string calibration_status = 6;
  string vendor = 7;
}

message GetCapabilityManifestRequest {
  string client_id = 1;
  // When true, allows mock/offline manifests for editor-only sessions.
  bool include_mock_capabilities = 2;
}

message GetCapabilityManifestResponse {
  CapabilityManifest manifest = 1;
}

// Diagnostics surfaced alongside robot telemetry for Studio HUDs.
message EditorDiagnostics {
  float latency_ms = 1;
  float packet_loss_rate = 2;
  int32 ble_rssi = 3;
  bool mock_mode = 4;
  float uplink_kbps = 5;
  float downlink_kbps = 6;
}

// Safety overlays and predicted hazards derived from SafetyHead.
message SafetyState {
  bool estop_engaged = 1;
  bool rate_limited = 2;
  bool envelope_violated = 3;
  double predicted_collision_horizon_s = 4;
  string safety_head_state = 5;
  repeated string active_envelopes = 6;
}

message HopeCmsSignals {
  HopeFastSignals fast = 1;
  HopeMidSignals mid = 2;
  HopeSlowSignals slow = 3;
}

message HopeFastSignals {
  repeated float hazard_scores = 1;
  repeated string hazard_labels = 2;
  float safety_head_override = 3;
}

message HopeMidSignals {
  string intent_label = 1;
  float intent_confidence = 2;
  repeated string suggested_skills = 3;
}

message HopeSlowSignals {
  string policy_version = 1;
  string memory_plane_version = 2;
  string cms_balance = 3;
  string last_training_summary_id = 4;
}

message StreamRobotEditorTelemetryRequest {
  string client_id = 1;
  bool include_hope_cms_signals = 2;
  bool include_diagnostics = 3;
}

message StreamRobotEditorTelemetryResponse {
  continuonxr.rlds.v1.RobotState robot_state = 1;
  EditorDiagnostics diagnostics = 2;
  SafetyState safety_state = 3;
  HopeCmsSignals hope_cms_signals = 4;
}
